<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrarProveedor">

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView42">

        <EditText
            android:id="@+id/et_dni2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_ingresarDni_string"
            android:inputType="number"
            android:maxLength="8" />

        <EditText
            android:id="@+id/et_nombresCliente2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_nombres"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="325dp" />

        <EditText
            android:id="@+id/et_apellido2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_apellidos_string"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="370dp" />

        <EditText
            android:id="@+id/et_telefono2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_telefono_string"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et_correo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_correo_string"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_direccion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_direccion"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button17"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="Registrar"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrar Proveedor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageButton
        android:id="@+id/imageButton20"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>