<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_logoVeterinaria"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/vetsalud_t1" />

                <EditText
                    android:id="@+id/et_dniInicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:ems="7"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="8"
                    app:layout_constraintBottom_toBottomOf="@+id/button"
                    app:layout_constraintEnd_toStartOf="@+id/button"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="@+id/iv_logoVeterinaria"
                    app:layout_constraintTop_toTopOf="@+id/button" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="115dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:onClick="ingresar"
                    android:text="@string/bt_ingresar_string"
                    app:layout_constraintEnd_toEndOf="@+id/iv_logoVeterinaria"
                    app:layout_constraintStart_toEndOf="@+id/et_dniInicio"
                    app:layout_constraintTop_toBottomOf="@+id/iv_logoVeterinaria" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="registrarNCliente"

                    android:text="@string/tv_registarNC"
                    android:textColor="#2196F3"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/button"
                    app:layout_constraintTop_toBottomOf="@+id/button" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:onClick="buscarCliente"
                    android:text="@string/bt_buscar_string"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="75dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="30dp"
                    android:onClick="salir"
                    android:text="@string/bt_salir_string"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/button2"
                    app:layout_constraintTop_toBottomOf="@+id/button2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>