<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modificarProveedor">

    <ImageButton
        android:id="@+id/imageButton19"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Modificar Proveedor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout15">

        <Button
            android:id="@+id/button25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="ver Proveedores" />

        <EditText
            android:id="@+id/et_nomProveedorModi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_nombres"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="254dp" />

        <EditText
            android:id="@+id/et_apeProveedorModi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_apellidos_string"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="299dp" />

        <EditText
            android:id="@+id/et_fonoProveedorModi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_telefono_string"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et_correoProveeModi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_correo_string"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="389dp" />

        <EditText
            android:id="@+id/et_direcProveeModi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_direccion"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="434dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView43">

        <EditText
            android:id="@+id/et_dniProveedorModi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:ems="6"
            android:gravity="center"
            android:hint="DNI"
            android:inputType="number"
            android:maxLength="8" />

        <Button
            android:id="@+id/button23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Buscar"
            tools:layout_editor_absoluteX="292dp"
            tools:layout_editor_absoluteY="193dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout16">

        <Button
            android:id="@+id/button24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Eliminar"
            android:textColor="#F44336" />

        <Button
            android:id="@+id/button22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Modificar"
            android:textColor="#3F51B5"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="565dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>